--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
             .nav-collapse.collapse
               %ul.nav
                 %li= link_to t(:keys)
-                %li= link_to t(:apps)
+                %li= link_to t(:apps), apps_path
                 %li= link_to t(:profile), edit_user_registration_path(current_user)
 
       .row-fluid
