--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
 
             .nav-collapse.collapse
               %ul.nav
-                %li= link_to t(:keys)
+                %li= link_to t(:keys), keys_path
                 %li= link_to t(:apps), apps_path
                 %li= link_to t(:profile), edit_user_registration_path(current_user)
 
